--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.13.2)
 project(Invincible_ClientLogic)
 
 set(CMAKE_CXX_STANDARD 11)
@@ -7,3 +7,4 @@ set(SOURCE CMAKE_SOURCE_DIR)
 add_executable(Invincible_ClientLogic main.cpp)
 
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(${PROJECT_NAME} curl)
